[tool.poetry]
name = "dice-roll-v1"
version = "0.1.0"
description = "A dice rolling application"
authors = ["Andrii Gegliuk <andrii.gegliuk@gmail.com>"]
readme = "README.md"
packages = [{include = "dice_roll_v1", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
flask = ">=3.1.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
